<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <CheckBox
            android:id="@+id/opt_overlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt_overlay_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingBottom="12dp"
            android:text="@string/opt_overlay_summary"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/opt_purist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt_purist_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:paddingBottom="12dp"
            android:text="@string/opt_purist_summary"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/opt_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:text="@string/opt_audio_title" />

        <CheckBox
            android:id="@+id/opt_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt_timer_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="32dp"
            android:text="@string/opt_timer_summary"
            android:textSize="12sp" />

    </LinearLayout>

</ScrollView>
